Fix: corrección de rutas del frontend y activación de CORS en server.js

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
        <title>ClubGest</title> 
     </head>
     <bod>
-        <h1>Página de prueba</h1>
+        <h1>ClubGest</h1>
         <p>Click <a href="./jugador.html">aqui</a> para ver el menu del jugador</p>
     </bod>
 </html>
