--- a/frontend/jugador.html
+++ b/frontend/jugador.html
@@ -4,7 +4,7 @@
        <title>Jugador</title> 
     </head>
     <bod>
-        <h1>Página de prueba</h1>
-        <p>Aqui puedes ver el mapa</p>
+        <h1>Jugador</h1>
+        <p>Click <a href="./index.html">aqui</a> puedes ver volver a inicio</p>
     </bod>
 </html>
