Conectar formulario registro jugador con backend API para simplfificar la fusión mas adelante en la rama dev

--- a/frontend/pages/jugadores.html
+++ b/frontend/pages/jugadores.html
@@ -31,9 +31,8 @@
         
         <main class="main">
             <h2>Gestión de Jugadores</h2>
-            <p>Para CLUB: Crear, ver, editar y eliminar jugadores</p>
-            <p>Para ENTRENADOR: Ver fichas y editar info deportiva (dorsal, posición)</p>
-            <!-- Contenido a desarrollar: tabla de jugadores -->
+            <p>Listado de jugadores del club</p>
+            <!-- Aquí irá la lista de jugadores cuando aprenda js -->
         </main>
     </div>
 </body>
