--- a/frontend/pages/register-jugador.html
+++ b/frontend/pages/register-jugador.html
@@ -12,32 +12,36 @@
             <h1>⚽ ClubGest</h1>
             <p>Registro de Jugador</p>
         </div>
-        <form>
+        <form action="http://localhost:8080/api/jugadores" method="POST">
             <div class="form-group">
                 <label>Nombre</label>
-                <input type="text" placeholder="Nombre" required>
+                <input type="text" name="nombre" placeholder="Nombre">
             </div>
             <div class="form-group">
                 <label>Apellidos</label>
-                <input type="text" placeholder="Apellidos" required>
-            </div>
-            <div class="form-group">
-                <label>Fecha de Nacimiento</label>
-                <input type="date" required>
-            </div>
-            <div class="form-group">
-                <label>Posición</label>
-                <input type="text" placeholder="Ej: Delantero" required>
+                <input type="text" name="apellidos" placeholder="Apellidos" required>
             </div>
             <div class="form-group">
                 <label>Email</label>
-                <input type="email" placeholder="jugador@correo.com" required>
+                <input type="email" name="email" placeholder="jugador@correo.com">
             </div>
             <div class="form-group">
-                <label>Contraseña</label>
-                <input type="password" placeholder="••••••••" required>
+                <label>Teléfono</label>
+                <input type="tel" name="telefono" placeholder="600123456">
             </div>
-            <button type="button" class="btn" onclick="location.href='../index.html'">Registrar</button>
+            <div class="form-group">
+                <label>Categoría</label>
+                <input type="text" name="categoria" placeholder="Sub-16">
+            </div>
+            <div class="form-group">
+                <label>Dorsal</label>
+                <input type="number" name="dorsal" placeholder="10">
+            </div>
+            <div class="form-group">
+                <label>Posición</label>
+                <input type="text" name="posicion" placeholder="Delantero">
+            </div>
+            <button type="submit" class="btn">Registrar Jugador</button>
         </form>
         <div class="links">
             <a href="../index.html">Volver al login</a>
