--- a/frontend/pages/asistencias.html
+++ b/frontend/pages/asistencias.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="page-asistencias">
+    <!-- Misma estructura Grid que el resto de páginas internas -->
     <div class="layout">
         <header class="header">
             <h1>⚽ ClubGest</h1>
