--- a/frontend/pages/entrenadores.html
+++ b/frontend/pages/entrenadores.html
@@ -5,7 +5,8 @@
     <title>Entrenadores - ClubGest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="page-entrenadores">
+<body class="page-entrenadores"> <!-- class para estilos específicos -->
+    <!-- Layout con Grid: mismo patrón que dashboard.html -->
     <div class="layout">
         <header class="header">
             <h1>⚽ ClubGest</h1>
