--- a/frontend/pages/jugadores.html
+++ b/frontend/pages/jugadores.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body class="page-jugadores">
+    <!-- Página para listar jugadores (requiere JS para cargar desde API) -->
     <div class="layout">
         <header class="header">
             <h1>⚽ ClubGest</h1>
