--- a/frontend/pages/register-club.html
+++ b/frontend/pages/register-club.html
@@ -12,6 +12,7 @@
             <h1>⚽ ClubGest</h1>
             <p>Registro de Club</p>
         </div>
+        <!-- Formulario sin backend: solo mockup para demostración -->
         <form>
             <div class="form-group">
                 <label>Nombre del Club</label>
@@ -33,6 +34,7 @@
                 <label>Contraseña</label>
                 <input type="password" placeholder="••••••••" required>
             </div>
+            <!-- onclick: redirige sin enviar datos -->
             <button type="button" class="btn" onclick="location.href='../index.html'">Registrar</button>
         </form>
         <div class="links">
