--- a/frontend/pages/register-entrenador.html
+++ b/frontend/pages/register-entrenador.html
@@ -12,6 +12,7 @@
             <h1>⚽ ClubGest</h1>
             <p>Registro de Entrenador</p>
         </div>
+        <!-- Formulario mockup: aún no conectado a backend -->
         <form>
             <div class="form-group">
                 <label>Nombre</label>
