Style: ajustes esteticos del index.html y el auth.css

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
         <!-- LADO IZQUIERDO (FIJO)-->
          <div class="lado-izquierdo">
             <div class="logo">
-                <img src="./img/ACG-small-logo.png" alt="LOGO">
-                <h1>ClubGest Amateurs</h1>
+                <img src="./img/ACG-small-logo.png" alt="Logo ClubGest">
+                <h1 class="sr-only">ClubGest Amateurs</h1>
                 <p>Sistema de Gestión de Clubes Deportivos Amateurs</p>
             </div>
         </div>
