--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
             <div class="logo">
                 <img src="./img/ACG-small-logo.png" alt="Logo ClubGest">
                 <h1 class="sr-only">ClubGest Amateurs</h1>
-                <p>Sistema de Gestión de Clubes Deportivos Amateurs</p>
+                <p>¡Uniendo clubes!</p>
             </div>
         </div>
         
@@ -86,7 +86,6 @@
                         <input type="email" name="email" placeholder="club@correo.com" required>
                     </div>
                     <button type="submit" class="btn">Registrar Club</button>
-                    <label for="tab-registro" class="btn-volver">Volver</label>
                 </form>
             </div>
 
