Feat: Frontend architecture with modular CSS and responsive design
- Reemplazado sistema de emojis por iconografía SVG inline profesional
- CSS modularizado en 4 archivos especializados (variables, layout, components, pages)
- Navbar unificado en 7 páginas con navegación consistente y estados activos
- Dashboard responsivo con Flexbox/Grid para desktop, tablet y mobile
- 7 páginas funcionales: home, entrenamientos, convocatorias, fichas, seguros, lesiones, register
- Identidad visual coherente: 'Club Gest' en headers y footers
- Código documentado técnicamente para auditoría y mantenimiento

--- a/frontend/pages/future/configuracion.html
+++ b/frontend/pages/future/configuracion.html
@@ -2,13 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Categorías - ClubGest</title>
+    <title>Configuración - ClubGest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="page-categorias">
+<body class="page-configuracion">
     <div class="layout">
         <header class="header">
-            <h1>⚽ ClubGest</h1>
+            <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2a8 8 0 110 16 8 8 0 010-16z" fill="currentColor"/><path d="M12 6l2.5 2.5L12 11l-2.5-2.5L12 6zm0 6l2.5 2.5L12 17l-2.5-2.5L12 12z" fill="currentColor"/><line x1="8" y1="12" x2="16" y2="12" stroke="currentColor" stroke-width="2"/></svg>ClubGest</h1>
             <span>Usuario: admin@club.com</span>
         </header>
         
@@ -30,9 +30,11 @@
         </aside>
         
         <main class="main">
-            <h2>Categorías del Club</h2>
-            <p>Gestión de categorías (Sub-18, Sénior, Veteranos, etc.)</p>
-            <!-- Contenido a desarrollar: listado de categorías -->
+            <h2>Configuración</h2>
+            <p>Preferencias de la cuenta</p>
+            <p>Idioma (futuro)</p>
+            <p>Tema claro/oscuro (futuro)</p>
+            <!-- Contenido a desarrollar: opciones de configuración -->
         </main>
     </div>
 </body>
