--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
                     <input type="password" placeholder="••••••••" required>
                 </div>
                 <!-- type="button" + onclick: redirige sin enviar formulario -->
-                <button type="button" class="btn" onclick="location.href='pages/dashboard.html'">Entrar</button>
+                <button type="button" class="btn" onclick="location.href='pages/home.html'">Entrar</button>
             </form>
         </div>
         
