--- a/frontend/pages/fichas.html
+++ b/frontend/pages/fichas.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fichas de Jugadores - Club Gest</title>
+    <title>Fichas - Club Gest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
     <header class="header header-club">
         <div class="header-left">
             <h1>Club Gest</h1>
-            <p class="header-subtitle">Fichas de Jugadores Registrados</p>
+            <p class="header-subtitle">Fichas de Jugadores</p>
         </div>
         <div class="header-right">
             <span class="user-info">Admin: <strong>Club Deportivo</strong></span>
@@ -34,19 +34,94 @@
         <!-- MAIN -->
         <main class="main-content">
             <div class="page-header">
-                <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 4h2a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2"></path><rect x="8" y="2" width="8" height="4" rx="1" ry="1"></rect></svg>Fichas de Jugadores</h1>
-                <div class="filters">
-                    <select class="filter-select">
-                        <option>Todos los estados</option>
-                        <option>Pendiente revisión</option>
-                        <option>Aceptado</option>
-                        <option>Rechazado</option>
-                    </select>
-                </div>
+                <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 3H5c-1 0-2 1-2 2v14c0 1 1 2 2 2h14c1 0 2-1 2-2V5c0-1-1-2-2-2z"></path><path d="M9 7h6M9 11h6M9 15h2"></path></svg>Fichas de Jugadores Aceptados</h1>
             </div>
 
             <!-- Grid de fichas -->
             <div class="fichas-grid" id="fichasGrid">
+                <!-- Ficha 1 - Aceptada -->
+                <div class="ficha-card">
+                    <div class="ficha-header">
+                        <h3>Carlos Ruiz López</h3>
+                        <span class="badge badge-success">Aceptado</span>
+                    </div>
+                    <div class="ficha-body">
+                        <p><strong>Email:</strong> carlos.ruiz@email.com</p>
+                        <p><strong>Teléfono:</strong> 666 789 012</p>
+                        <p><strong>Categoría:</strong> Senior</p>
+                        <p><strong>Posición:</strong> Apertura</p>
+                        <p><strong>Dorsal:</strong> 10</p>
+                        <p><strong>Fecha registro:</strong> 05/12/2025</p>
+                    </div>
+                    <div class="ficha-actions">
+                        <button class="btn btn-small btn-info" onclick="verDetalles(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>Ver más</button>
+                        <button class="btn btn-small btn-warning" onclick="editarFicha(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>Editar</button>
+                    </div>
+                </div>
+
+                <!-- Ficha 2 - Aceptada -->
+                <div class="ficha-card">
+                    <div class="ficha-header">
+                        <h3>Miguel Sánchez Romero</h3>
+                        <span class="badge badge-success">Aceptado</span>
+                    </div>
+                    <div class="ficha-body">
+                        <p><strong>Email:</strong> miguel.sanchez@email.com</p>
+                        <p><strong>Teléfono:</strong> 666 345 678</p>
+                        <p><strong>Categoría:</strong> Sub-21</p>
+                        <p><strong>Posición:</strong> Centro</p>
+                        <p><strong>Dorsal:</strong> 12</p>
+                        <p><strong>Fecha registro:</strong> 08/12/2025</p>
+                    </div>
+                    <div class="ficha-actions">
+                        <button class="btn btn-small btn-info" onclick="verDetalles(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>Ver más</button>
+                        <button class="btn btn-small btn-warning" onclick="editarFicha(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>Editar</button>
+                    </div>
+                </div>
+
+                <!-- Ficha 3 - Aceptada -->
+                <div class="ficha-card">
+                    <div class="ficha-header">
+                        <h3>Juan Pérez García</h3>
+                        <span class="badge badge-success">Aceptado</span>
+                    </div>
+                    <div class="ficha-body">
+                        <p><strong>Email:</strong> juan.perez@email.com</p>
+                        <p><strong>Teléfono:</strong> 666 123 456</p>
+                        <p><strong>Categoría:</strong> Senior</p>
+                        <p><strong>Posición:</strong> Pilar</p>
+                        <p><strong>Dorsal:</strong> 1</p>
+                        <p><strong>Fecha registro:</strong> 07/12/2025</p>
+                    </div>
+                    <div class="ficha-actions">
+                        <button class="btn btn-small btn-info" onclick="verDetalles(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>Ver más</button>
+                        <button class="btn btn-small btn-warning" onclick="editarFicha(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>Editar</button>
+                    </div>
+                </div>
+            </div>
+
+            <div class="table-info">
+                <p>Total fichas aceptadas: <strong>3</strong></p>
+            </div>
+        </main>
+    </div>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p>&copy; 2025 Rugby Club Gest</p>
+    </footer>
+
+    <script>
+        function verDetalles(id) {
+            alert('Ver detalles completos de la ficha ' + id);
+        }
+
+        function editarFicha(id) {
+            alert('Editar información de la ficha ' + id);
+        }
+    </script>
+</body>
+</html>
                 <!-- Ficha 1 -->
                 <div class="ficha-card">
                     <div class="ficha-header">
