--- a/frontend/pages/future/lesiones.html
+++ b/frontend/pages/future/lesiones.html
@@ -2,14 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Entrenadores - ClubGest</title>
+    <title>Lesiones - ClubGest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="page-entrenadores"> <!-- class para estilos específicos -->
-    <!-- Layout con Grid: mismo patrón que dashboard.html -->
+<body class="page-lesiones">
     <div class="layout">
         <header class="header">
-            <h1>⚽ ClubGest</h1>
+            <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2a8 8 0 110 16 8 8 0 010-16z" fill="currentColor"/><path d="M12 6l2.5 2.5L12 11l-2.5-2.5L12 6zm0 6l2.5 2.5L12 17l-2.5-2.5L12 12z" fill="currentColor"/><line x1="8" y1="12" x2="16" y2="12" stroke="currentColor" stroke-width="2"/></svg>ClubGest</h1>
             <span>Usuario: admin@club.com</span>
         </header>
         
@@ -31,9 +30,10 @@
         </aside>
         
         <main class="main">
-            <h2>Gestión de Entrenadores</h2>
-            <p>Listado de entrenadores del club (principalmente para administración)</p>
-            <!-- Contenido a desarrollar: tabla de entrenadores -->
+            <h2>Gestión de Lesiones</h2>
+            <p>Listado y detalle de lesiones por jugador</p>
+            <p>Entrenador/Club: Ver estado físico de jugadores</p>
+            <!-- Contenido a desarrollar: historial de lesiones -->
         </main>
     </div>
 </body>
