--- a/frontend/pages/future/seguros.html
+++ b/frontend/pages/future/seguros.html
@@ -2,14 +2,13 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Jugadores - ClubGest</title>
+    <title>Seguros - ClubGest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="page-jugadores">
-    <!-- Página para listar jugadores (requiere JS para cargar desde API) -->
+<body class="page-seguros">
     <div class="layout">
         <header class="header">
-            <h1>⚽ ClubGest</h1>
+            <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/><path d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2a8 8 0 110 16 8 8 0 010-16z" fill="currentColor"/><path d="M12 6l2.5 2.5L12 11l-2.5-2.5L12 6zm0 6l2.5 2.5L12 17l-2.5-2.5L12 12z" fill="currentColor"/><line x1="8" y1="12" x2="16" y2="12" stroke="currentColor" stroke-width="2"/></svg>ClubGest</h1>
             <span>Usuario: admin@club.com</span>
         </header>
         
@@ -31,9 +30,11 @@
         </aside>
         
         <main class="main">
-            <h2>Gestión de Jugadores</h2>
-            <p>Listado de jugadores del club</p>
-            <!-- Aquí irá la lista de jugadores cuando aprenda js -->
+            <h2>Pólizas y Seguros</h2>
+            <p>CLUB: Ver y gestionar pólizas</p>
+            <p>ENTRENADOR: Ver si jugador está asegurado</p>
+            <p>JUGADOR: Ve su seguro en Datos Personales</p>
+            <!-- Contenido a desarrollar: listado de pólizas y asociación con jugadores -->
         </main>
     </div>
 </body>
