--- a/frontend/pages/lesiones.html
+++ b/frontend/pages/lesiones.html
@@ -2,39 +2,123 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Lesiones - ClubGest</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lesiones - Club Gest</title>
     <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="page-lesiones">
-    <div class="layout">
-        <header class="header">
-            <h1>⚽ ClubGest</h1>
-            <span>Usuario: admin@club.com</span>
-        </header>
-        
-        <aside class="sidebar">
-            <nav>
-                <a href="dashboard.html">Dashboard</a>
-                <a href="jugadores.html">Jugadores</a>
-                <a href="entrenadores.html">Entrenadores</a>
-                <a href="entrenamientos.html">Entrenamientos</a>
-                <a href="convocatorias.html">Convocatorias</a>
-                <a href="asistencias.html">Asistencias</a>
-                <a href="categorias.html">Categorías</a>
-                <a href="lesiones.html">Lesiones</a>
-                <a href="seguros.html">Seguros</a>
-                <a href="datos-personales.html">Datos Personales</a>
-                <a href="configuracion.html">Configuración</a>
-                <a href="../index.html">Salir</a>
-            </nav>
-        </aside>
-        
-        <main class="main">
-            <h2>Gestión de Lesiones</h2>
-            <p>Listado y detalle de lesiones por jugador</p>
-            <p>Entrenador/Club: Ver estado físico de jugadores</p>
-            <!-- Contenido a desarrollar: historial de lesiones -->
+<body>
+    <!-- HEADER -->
+    <header class="header header-club">
+        <div class="header-left">
+            <h1>Club Gest</h1>
+            <p class="header-subtitle">Registro de Lesiones de Jugadores</p>
+        </div>
+        <div class="header-right">
+            <span class="user-info">Admin: <strong>Club Deportivo</strong></span>
+            <a href="../index.html" class="btn btn-small btn-danger">Salir</a>
+        </div>
+    </header>
+
+    <!-- NAVBAR -->
+    <nav class="navbar-top">
+        <a href="home.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Inicio</a>
+        <a href="convocatorias.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>Convocatorias</a>
+        <a href="entrenamientos.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="5" cy="10" r="2.5"></circle><circle cx="19" cy="10" r="2.5"></circle><line x1="8" y1="10" x2="16" y2="10"></line><path d="M7 5v10M17 5v10"></path></svg>Entrenamientos</a>
+        <a href="lesiones.html" class="nav-link active"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"></path><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>Lesiones</a>
+        <a href="seguros.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>Seguros</a>
+        <a href="fichas.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M19 3H5c-1 0-2 1-2 2v14c0 1 1 2 2 2h14c1 0 2-1 2-2V5c0-1-1-2-2-2z"></path><path d="M9 7h6M9 11h6M9 15h2"></path></svg>Fichas</a>
+    </nav>
+
+    <!-- LAYOUT -->
+    <div class="layout-flex">
+        <!-- MAIN -->
+        <main class="main-content">
+            <div class="page-header">
+                <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2z"></path><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line></svg>Registro de Lesiones</h1>
+                <button class="btn btn-success">+ Nueva Lesión</button>
+            </div>
+
+            <!-- Tabla de lesiones -->
+            <table class="data-table">
+                <thead>
+                    <tr>
+                        <th>Jugador</th>
+                        <th>Tipo de Lesión</th>
+                        <th>Fecha Lesión</th>
+                        <th>Gravedad</th>
+                        <th>Días de Baja</th>
+                        <th>Estado</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Juan Pérez García</strong></td>
+                        <td>Esguince de tobillo</td>
+                        <td>15/11/2024</td>
+                        <td><span class="badge badge-warning">Moderada</span></td>
+                        <td>14 días</td>
+                        <td><span class="badge badge-success">Recuperado</span></td>
+                        <td>
+                            <button class="btn btn-small btn-info" onclick="verDetalles(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                            <button class="btn btn-small btn-warning" onclick="editarLesion(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                            <button class="btn btn-small btn-danger" onclick="eliminarLesion(1)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Carlos Ruiz López</strong></td>
+                        <td>Contractura muscular</td>
+                        <td>20/11/2024</td>
+                        <td><span class="badge badge-info">Leve</span></td>
+                        <td>3 días</td>
+                        <td><span class="badge badge-success">Recuperado</span></td>
+                        <td>
+                            <button class="btn btn-small btn-info" onclick="verDetalles(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                            <button class="btn btn-small btn-warning" onclick="editarLesion(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                            <button class="btn btn-small btn-danger" onclick="eliminarLesion(2)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><strong>Miguel Sánchez Romero</strong></td>
+                        <td>Distensión isquiotibial</td>
+                        <td>25/11/2024</td>
+                        <td><span class="badge badge-danger">Grave</span></td>
+                        <td>21 días</td>
+                        <td><span class="badge badge-warning">En recuperación</span></td>
+                        <td>
+                            <button class="btn btn-small btn-info" onclick="verDetalles(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg></button>
+                            <button class="btn btn-small btn-warning" onclick="editarLesion(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
+                            <button class="btn btn-small btn-danger" onclick="eliminarLesion(3)"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div class="table-info">
+                <p>Total lesiones registradas: <strong>3</strong> | En recuperación: <strong>1</strong> | Recuperados: <strong>2</strong></p>
+            </div>
         </main>
     </div>
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <p>&copy; 2025 Rugby Club Gest</p>
+    </footer>
+
+    <script>
+        function verDetalles(id) {
+            alert('Ver detalles de la lesión ' + id);
+        }
+
+        function editarLesion(id) {
+            alert('Editar lesión ' + id);
+        }
+
+        function eliminarLesion(id) {
+            if (confirm('¿Estás seguro de que deseas eliminar este registro de lesión?')) {
+                alert('Lesión ' + id + ' eliminada');
+            }
+        }
+    </script>
 </body>
 </html>
