Style: Optimize responsive design for tablet and mobile layouts

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,9 @@
 <head>
     <!-- Configuración básica de la página -->
     <meta charset="UTF-8"> <!-- Codificación UTF-8: permite acentos, ñ, etc. -->
-    <title>ClubGest - Login</title>
+    <!-- Viewport: Configura la escala para dispositivos móviles -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Club Gest - Login</title>
     <link rel="stylesheet" href="css/auth.css">
 </head>
 <body>
