--- a/frontend/pages/entrenamientos.html
+++ b/frontend/pages/entrenamientos.html
@@ -46,22 +46,11 @@
                             <th>Tipo</th>
                             <th>Categoría</th>
                             <th>Lugar</th>
+                            <th>Asistencia</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
-                    <tbody id="entrenamientosTable">
-                        <tr>
-                            <td>Jueves 12 Dic</td>
-                            <td>18:30</td>
-                            <td>Técnico</td>
-                            <td>Senior</td>
-                            <td>Campo Principal</td>
-                            <td>
-                                <button class="btn-icon"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg></button>
-                                <button class="btn-icon"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="3 6 5 6 21 6"></polyline><path d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"></path><line x1="10" y1="11" x2="10" y2="17"></line><line x1="14" y1="11" x2="14" y2="17"></line></svg></button>
-                            </td>
-                        </tr>
-                    </tbody>
+                    <tbody id="entrenamientosTable"></tbody>
                 </table>
             </div>
         </main>
@@ -70,5 +59,47 @@
     <footer class="footer">
         <p>&copy; 2025 Rugby Club Gest</p>
     </footer>
+    <script>
+        // Datos de ejemplo. TODO: sustituir por fetch a /api/entrenamientos cuando exista.
+        const entrenamientos = [
+            { id: 1, fecha: 'Jueves 12 Dic', hora: '18:30', tipo: 'Técnico', categoria: 'Senior', lugar: 'Campo Principal', asistencia: 'Pendiente' },
+            { id: 2, fecha: 'Martes 17 Dic', hora: '19:00', tipo: 'Físico', categoria: 'Sub-21', lugar: 'Campo Auxiliar', asistencia: 'Pendiente' },
+            { id: 3, fecha: 'Jueves 19 Dic', hora: '18:30', tipo: 'Mixto', categoria: 'Senior', lugar: 'Campo Principal', asistencia: 'No asistiré' }
+        ];
+
+        const statusBadge = (estado) => {
+            if (estado === 'Asistiré') return '<span class="badge badge-success">Asistiré</span>';
+            if (estado === 'No asistiré') return '<span class="badge badge-danger">No asistiré</span>';
+            return '<span class="badge badge-warning">Pendiente</span>';
+        };
+
+        function renderEntrenamientos() {
+            const tbody = document.getElementById('entrenamientosTable');
+            tbody.innerHTML = entrenamientos.map((e) => `
+                <tr>
+                    <td>${e.fecha}</td>
+                    <td>${e.hora}</td>
+                    <td>${e.tipo}</td>
+                    <td>${e.categoria}</td>
+                    <td>${e.lugar}</td>
+                    <td>${statusBadge(e.asistencia)}</td>
+                    <td>
+                        <button class="btn btn-small btn-success" onclick="marcarAsistencia(${e.id}, 'Asistiré')">Asistiré</button>
+                        <button class="btn btn-small btn-danger" onclick="marcarAsistencia(${e.id}, 'No asistiré')">No asistiré</button>
+                    </td>
+                </tr>
+            `).join('');
+        }
+
+        function marcarAsistencia(id, estado) {
+            const item = entrenamientos.find((e) => e.id === id);
+            if (!item) return;
+            item.asistencia = estado;
+            renderEntrenamientos();
+            // TODO: cuando exista backend, hacer PATCH/PUT a /api/entrenamientos/:id/asistencia
+        }
+
+        renderEntrenamientos();
+    </script>
 </body>
 </html>
