Style: Reorganizar header con logo y texto juntos a la izquierda

--- a/frontend/pages/entrenamientos.html
+++ b/frontend/pages/entrenamientos.html
@@ -10,8 +10,11 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <h1>Club Gest</h1>
-            <p class="header-subtitle">Gestión de Entrenamientos</p>
+            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <div>
+                <h1>Club Gest</h1>
+                <p class="header-subtitle">Gestión de Entrenamientos</p>
+            </div>
         </div>
         <div class="header-right">
             <span class="user-info">Admin: <strong>Club Deportivo</strong></span>
