feat: Añadir atributos fecha_nacimiento y peso a la entidad jugadores, formularios actualizados y colección Postman

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,6 +123,14 @@
                         <label>Posición</label>
                         <input type="text" name="posicion" placeholder="Delantero">
                     </div>
+                    <div class="form-group">
+                        <label>Fecha de Nacimiento</label>
+                        <input type="date" name="fechaNacimiento" placeholder="dd/mm/aaaa">
+                    </div>
+                    <div class="form-group">
+                        <label>Peso (kg)</label>
+                        <input type="number" name="peso" step="0.1" min="0" placeholder="75.5">
+                    </div>
                     <button type="submit" class="btn">Registrar Jugador</button>
                     <label for="tab-registro" class="btn-volver">Volver</label>
                 </form>
