--- a/frontend/pages/convocatorias.html
+++ b/frontend/pages/convocatorias.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <!-- NAVBAR -->
+    <!-- NAVBAR la forma mas visual esta en home.html-->
     <nav class="navbar-top">
         <a href="home.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Inicio</a>
         <a href="convocatorias.html" class="nav-link active"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>Convocatorias</a>
