--- a/frontend/pages/registro-jugador.html
+++ b/frontend/pages/registro-jugador.html
@@ -22,7 +22,7 @@
         </div>
     </header>
 
-    <!-- NAVBAR -->
+    <!-- NAVBAR la forma mas visual esta en home.html-->
     <nav class="navbar-top">
         <a href="home.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>Inicio</a>
         <a href="convocatorias.html" class="nav-link"><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>Convocatorias</a>
@@ -62,6 +62,9 @@
                         <p><strong>Categoría:</strong> Senior</p>
                         <p><strong>Posición:</strong> Pilar</p>
                         <p><strong>Dorsal:</strong> 1</p>
+                        <p><strong>Fecha Nacimiento:</strong> 15/03/1995</p>
+                        <p><strong>Peso:</strong> 105 kg</p>
+                        <p><strong>Asistencia Entrenamientos:</strong> Sí</p>
                         <p><strong>Fecha registro:</strong> 07/12/2025</p>
                     </div>
                     <div class="ficha-actions">
@@ -83,6 +86,8 @@
                         <p><strong>Categoría:</strong> Senior</p>
                         <p><strong>Posición:</strong> Apertura</p>
                         <p><strong>Dorsal:</strong> 10</p>
+                        <p><strong>Fecha Nacimiento:</strong> 22/07/1997</p>
+                        <p><strong>Peso:</strong> 82 kg</p>
                         <p><strong>Fecha registro:</strong> 05/12/2025</p>
                     </div>
                     <div class="ficha-actions">
@@ -176,6 +181,9 @@
                         <p><strong>Categoría:</strong> ${jugador.categoria || 'No especificado'}</p>
                         <p><strong>Posición:</strong> ${jugador.posicion || 'No especificado'}</p>
                         <p><strong>Dorsal:</strong> ${jugador.dorsal || '-'}</p>
+                        <p><strong>Fecha Nacimiento:</strong> ${jugador.fechaNacimiento || 'No especificado'}</p>
+                        <p><strong>Peso:</strong> ${jugador.peso ? jugador.peso + ' kg' : 'No especificado'}</p>
+                        <p><strong>Asistencia Entrenamientos:</strong> ${jugador.asistenciaEntrenamientos ? 'Sí' : 'No'}</p>
                     </div>
                     <div class="ficha-actions">
                         <button class="btn btn-small btn-success" onclick="aceptarFicha(${jugador.id})"><svg class="icon-sm" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="20 6 9 17 4 12"></polyline></svg>Aceptar</button>
