--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -193,9 +193,8 @@
     </div>
 
     <!-- FOOTER -->
-    <!-- Pie de página con información de copyright y versión del sistema -->
     <footer class="footer">
-        <p>&copy; 2025 Club Gest - Sistema de Gestión de Clubes Deportivos</p>
+        <p>&copy; 2025 Rugby Club Gest</p>
     </footer>
 </body>
 </html>
