--- a/frontend/pages/entrenamientos.html
+++ b/frontend/pages/entrenamientos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Entrenamientos - Club Gest</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/png" href="../img/ACG-paint-logo.png">
 </head>
 <body>
     <!-- HEADER -->
@@ -33,8 +34,15 @@
     </nav>
 
     <!-- LAYOUT -->
-    <div class="layout-flex">
-        <main class="main-content">
+    <div class="layout">
+        <!-- Radios ocultos para paginación -->
+        <input type="radio" id="ent-page1" name="ent-pagination" class="pagination-radio" checked>
+        <input type="radio" id="ent-page2" name="ent-pagination" class="pagination-radio">
+        <input type="radio" id="ent-page3" name="ent-pagination" class="pagination-radio">
+        <input type="radio" id="ent-page4" name="ent-pagination" class="pagination-radio">
+        <input type="radio" id="ent-page5" name="ent-pagination" class="pagination-radio">
+
+        <main class="main">
             <div class="page-header">
                 <h1><svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="5" cy="10" r="2.5"></circle><circle cx="19" cy="10" r="2.5"></circle><line x1="8" y1="10" x2="16" y2="10"></line><path d="M7 5v10M17 5v10"></path></svg>Entrenamientos</h1>
                 <button class="btn btn-success" onclick="mostrarFormularioCrear()">+ Nuevo Entrenamiento</button>
@@ -112,8 +120,10 @@
         </main>
     </div>
 
+    <!-- FOOTER -->
+    <!-- Pie de página con información de copyright y versión del sistema -->
     <footer class="footer">
-        <p>&copy; 2025 Rugby Club Gest</p>
+        <p>&copy; 2025 Club Gest - Sistema de Gestión de Clubes Deportivos</p>
     </footer>
     <script>
         // ID del jugador actual (hardcodeado por ahora, en producción vendría de sesión)
