--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Gest - Inicio</title>
+    <title>Inicio - Club Gest</title>
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="icon" type="image/png" href="../img/ACG-paint-logo.png">
 </head>
 <body>
     <!-- HEADER -->
@@ -78,9 +79,9 @@
     </nav>
 
     <!-- LAYOUT -->
-    <div class="layout-flex">
+    <div class="layout">
         <!-- MAIN -->
-        <main class="main-content">
+        <main class="main">
             <!-- SECCIÓN DE BIENVENIDA Y PRESENTACIÓN -->
             <!-- Componente principal del dashboard con información introductoria del sistema -->
             <section class="welcome-section">
@@ -193,8 +194,9 @@
     </div>
 
     <!-- FOOTER -->
+    <!-- Pie de página con información de copyright y versión del sistema -->
     <footer class="footer">
-        <p>&copy; 2025 Rugby Club Gest</p>
+        <p>&copy; 2025 Club Gest - Sistema de Gestión de Clubes Deportivos</p>
     </footer>
 </body>
 </html>
