--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8"> <!-- Codificación UTF-8: permite acentos, ñ, etc. -->
     <!-- Viewport: Configura la escala para dispositivos móviles -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Club Gest - Login</title>
+    <title>Club Gest</title>
     <link rel="stylesheet" href="css/auth.css">
+    <link rel="icon" type="image/png" href="img/ACG-paint-logo.png">
 </head>
 <body>
     <!-- Radios ocultos: grupo principal (login / registro) -->
@@ -132,7 +133,6 @@
                         <input type="number" name="peso" step="0.1" min="0" placeholder="75.5">
                     </div>
                     <button type="submit" class="btn">Registrar Jugador</button>
-                    <label for="tab-registro" class="btn-volver">Volver</label>
                 </form>
             </div>
 
