Feat: Actualizar home con escudo ampliado, área de control y paginación en todas las páginas

--- a/frontend/pages/convocatorias.html
+++ b/frontend/pages/convocatorias.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <img src="../img/ACG-paint-logo.png" alt="Logo Club Gest" class="header-logo">
             <div>
                 <h1>Club Gest</h1>
                 <p class="header-subtitle">Convocatorias</p>
