--- a/frontend/pages/entrenamientos.html
+++ b/frontend/pages/entrenamientos.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <img src="../img/ACG-paint-logo.png" alt="Logo Club Gest" class="header-logo">
             <div>
                 <h1>Club Gest</h1>
                 <p class="header-subtitle">Gestión de Entrenamientos</p>
@@ -120,13 +120,15 @@
 
             <!-- Controles de paginación -->
             <div class="pagination-controls">
-                <label for="ent-page1" class="btn btn-small btn-info pagination-btn">← Anterior</label>
-                <span class="pagination-info">Página <strong id="paginaActual">1</strong> de <strong id="totalPaginas">1</strong></span>
-                <label for="ent-page2" class="btn btn-small btn-info pagination-btn">Siguiente →</label>
+                <label for="ent-page1" class="btn btn-small btn-info pagination-btn">← ANTERIOR</label>
+                <span class="pagination-info">
+                    Página <strong class="pagination-page-num">1</strong> de <strong class="pagination-total-pages">1</strong>
+                </span>
+                <label for="ent-page2" class="btn btn-small btn-info pagination-btn">SIGUIENTE →</label>
             </div>
 
             <div class="table-info">
-                <span>Total entrenamientos: <strong id="totalEntrenamientos">0</strong></span>
+                <p>Total registros: <strong>12</strong> entrenamientos | Mostrando: <strong>10</strong> por página</p>
             </div>
         </main>
     </div>
