--- a/frontend/pages/home.html
+++ b/frontend/pages/home.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <img src="../img/ACG-paint-logo.png" alt="Logo Club Gest" class="header-logo">
             <div>
                 <h1>Club Gest</h1>
                 <p class="header-subtitle">Panel de Administración</p>
@@ -85,17 +85,10 @@
             <!-- SECCIÓN DE BIENVENIDA Y PRESENTACIÓN -->
             <!-- Componente principal del dashboard con información introductoria del sistema -->
             <section class="welcome-section">
-                <h1>
-                    <svg class="icon-lg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-                        <circle cx="12" cy="12" r="10" fill="none" stroke="currentColor" stroke-width="2"/>
-                        <path d="M12 2a10 10 0 100 20 10 10 0 000-20zm0 2a8 8 0 110 16 8 8 0 010-16z" fill="currentColor"/>
-                        <path d="M12 6l2.5 2.5L12 11l-2.5-2.5L12 6zm0 6l2.5 2.5L12 17l-2.5-2.5L12 12z" fill="currentColor"/>
-                        <line x1="8" y1="12" x2="16" y2="12" stroke="currentColor" stroke-width="2"/>
-                    </svg>Club Gest
-                </h1>
+                <img src="../img/escudorandom.png" alt="Logo Club random" class="welcome-logo">
+                <h1>Área de control del club</h1>
                 <p class="intro-text">
-                    Sistema integral de gestión para clubes deportivos. Centraliza la administración de entrenamientos, 
-                    convocaciones, fichas de jugadores, registros de lesiones y pólizas de seguros desde una única plataforma.
+                    Gestiona entrenamientos, convocatorias, fichas de jugadores, lesiones y seguros desde una única plataforma.
                 </p>
             </section>
 
