--- a/frontend/pages/fichas.html
+++ b/frontend/pages/fichas.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <img src="../img/ACG-paint-logo.png" alt="Logo Club Gest" class="header-logo">
             <div>
                 <h1>Club Gest</h1>
                 <p class="header-subtitle">Fichas de Jugadores</p>
@@ -54,17 +54,17 @@
                 </div>
             </div>
 
-            <!-- Controles de paginación con labels -->
+            <!-- Controles de paginación -->
             <div class="pagination-controls">
-                <label for="page1" class="btn btn-small btn-info pagination-btn" id="btnPrev">← Anterior</label>
+                <label for="fic-page1" class="btn btn-small btn-info pagination-btn">← ANTERIOR</label>
                 <span class="pagination-info">
                     Página <strong class="pagination-page-num">1</strong> de <strong class="pagination-total-pages">1</strong>
                 </span>
-                <label for="page2" class="btn btn-small btn-info pagination-btn" id="btnNext">Siguiente →</label>
+                <label for="fic-page2" class="btn btn-small btn-info pagination-btn">SIGUIENTE →</label>
             </div>
 
             <div class="table-info">
-                <p>Total fichas: <strong id="totalFichas">0</strong> | Mostrando: <strong id="fichaMostradas">0</strong> por página</p>
+                <p>Total registros: <strong>12</strong> fichas | Mostrando: <strong>10</strong> por página</p>
             </div>
         </main>
     </div>
