--- a/frontend/pages/seguros.html
+++ b/frontend/pages/seguros.html
@@ -11,7 +11,7 @@
     <!-- HEADER -->
     <header class="header header-club">
         <div class="header-left">
-            <img src="../img/ACG-small-logo.png" alt="Logo Club Gest" class="header-logo">
+            <img src="../img/ACG-paint-logo.png" alt="Logo Club Gest" class="header-logo">
             <div>
                 <h1>Club Gest</h1>
                 <p class="header-subtitle">Gestión de Seguros</p>
@@ -80,8 +80,17 @@
                 </table>
             </div>
 
+            <!-- Controles de paginación -->
+            <div class="pagination-controls">
+                <label for="seg-page1" class="btn btn-small btn-info pagination-btn">← ANTERIOR</label>
+                <span class="pagination-info">
+                    Página <strong class="pagination-page-num">1</strong> de <strong class="pagination-total-pages">1</strong>
+                </span>
+                <label for="seg-page2" class="btn btn-small btn-info pagination-btn">SIGUIENTE →</label>
+            </div>
+
             <div class="table-info">
-                <span>Total seguros registrados: <strong>12</strong></span>
+                <p>Total registros: <strong>12</strong> seguros | Mostrando: <strong>10</strong> por página</p>
             </div>
         </main>
     </div>
